--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>edTECH Education</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -64,7 +65,59 @@
 
     <!---------- Main Banner Section Starts Here  ---------->
     <main>
+        <section class="mt-4">
+            <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
+                <div class="carousel-inner rounded ">
+                    <div class="carousel-item  active">
+                        <div class="carousel-caption">
+                            <h1 class="">Start Your Online Learning</h1>
+                            <p>A good online course is engaging and challenging. It invites students to participate,
+                                motivates them to contribute. </p>
+                            <button class="btn btn-primary btn-lg p-2">Get Started</button>
+                        </div>
+                        <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
+                    </div>
 
+
+                    <div class="carousel-item">
+                        <div class="carousel-caption">
+                            <h1 class="">Data Science with Python Course</h1>
+                            <p>This Data Science with Python certification course gives you a complete overview of
+                                Python’s data analytics tools and techniques. Learning python is crucial</p>
+                            <button class="btn btn-primary btn-lg p-2">Get Started</button>
+                        </div>
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-caption">
+                            <h1 class="">Data Science with Python Course</h1>
+                            <p>This Data Science with Python certification course gives you a complete overview of
+                                Python’s data analytics tools and techniques. Learning python is crucial</p>
+                            <button class="btn btn-primary btn-lg p-2">Get Started</button>
+                        </div>
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <section class="container-sm container-md mt-5">
+            <div class="mx-5 px-5">
+                <h1 class="text-center fw-bold">Discover Our Online Courses</h1>
+                <p class="text-center">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout</p>
+            </div>
+            <div></div>
+        </section>
     </main>
     <!---------- Main Banner Section Ends Here  ------------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
