Popular Courses section added

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <!---------- Header Section Ends Here  ---------->
 
     <!---------- Main Banner Section Starts Here  ---------->
-    <main>
-        <section class="mt-4">
+    <main class="pb-5">
+        <section class="container mt-4">
             <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
                 <div class="carousel-inner rounded ">
                     <div class="carousel-item  active">
@@ -75,18 +75,7 @@
                                 motivates them to contribute. </p>
                             <button class="btn btn-primary btn-lg p-2">Get Started</button>
                         </div>
-                        <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
-                    </div>
-
-
-                    <div class="carousel-item">
-                        <div class="carousel-caption">
-                            <h1 class="">Data Science with Python Course</h1>
-                            <p>This Data Science with Python certification course gives you a complete overview of
-                                Python’s data analytics tools and techniques. Learning python is crucial</p>
-                            <button class="btn btn-primary btn-lg p-2">Get Started</button>
-                        </div>
-                        <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-caption">
@@ -95,7 +84,16 @@
                                 Python’s data analytics tools and techniques. Learning python is crucial</p>
                             <button class="btn btn-primary btn-lg p-2">Get Started</button>
                         </div>
-                        <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="carousel-caption">
+                            <h1 class="">Data Science with Python Course</h1>
+                            <p>This Data Science with Python certification course gives you a complete overview of
+                                Python’s data analytics tools and techniques. Learning python is crucial</p>
+                            <button class="btn btn-primary btn-lg p-2">Get Started</button>
+                        </div>
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100 overlay" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -110,15 +108,125 @@
                 </button>
             </div>
         </section>
-        <section class="container-sm container-md mt-5">
-            <div class="mx-5 px-5">
-                <h1 class="text-center fw-bold">Discover Our Online Courses</h1>
-                <p class="text-center">It is a long established fact that a reader will be distracted by the readable
-                    content of a page when looking at its layout</p>
-            </div>
-            <div></div>
-        </section>
     </main>
+    <section class="container mt-5">
+        <h1 class="text-center fw-bold">Enroll To Our Popular Courses</h1>
+        <p class="text-center mx-5 px-5">Start switch, or advance your career with more than 100 courses, Professional
+            Certificates, and degrees from
+            world-class universities and companies.</p>
+        <div>
+            <div class="row mt-5">
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Fundamental Of UI/UX Design
+                                    </h5>
+                                    <p class="card-text">Most designers are familiar with the concept of “design
+                                        thinking” as a UX process.</p>
+                                    <p class="text-info fw-bold">Price: $50</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Javascript Basic to advanced</h5>
+                                    <p class="card-text">Take your skills to a new level and join
+                                        millions of users that have learned Javascript.</p>
+                                    <p class="text-info fw-bold">Price: $100</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text">A full stack web developer is a person who can develop both
+                                        client and server software.</p>
+                                    <p class="text-info fw-bold">Price: $150</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Digital Marketing</h5>
+                                    <p class="card-text">Digital marketing, also called online marketing, is the
+                                        promotion of brands to connect with potential customers</p>
+                                    <p class="text-info fw-bold">Price: $50</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Photography Basic Rules</h5>
+                                    <p class="card-text">Take better photos by enroling to our basic photography rules
+                                        coures </p>
+                                    <p class="text-info fw-bold">Price: $80</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mb-3">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Motion Graphics</h5>
+                                    <p class="card-text">Motion graphics is animation, but with text as a major
+                                        component.</p>
+                                    <p class="text-info fw-bold">Price: $70</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="text-center mt-5">
+            <button class="btn btn-primary p-3">See More Courses</button>
+        </div>
+    </section>
+
     <!---------- Main Banner Section Ends Here  ------------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
