--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             </div>
         </section>
     </main>
+    <!---------- Main Banner Section Ends Here  ------------>
+    <!-- Courses Section starts here -->
     <section class="container mt-5">
         <h1 class="text-center fw-bold">Enroll To Our Popular Courses</h1>
         <p class="text-center mx-5 px-5">Start switch, or advance your career with more than 100 courses, Professional
@@ -226,8 +228,90 @@
             <button class="btn btn-primary p-3">See More Courses</button>
         </div>
     </section>
-
-    <!---------- Main Banner Section Ends Here  ------------>
+    <!-- Courses section ends here  -->
+    <!-- FAQ section starts here  -->
+    <section class="container mt-5">
+        <div class="text-center px-5">
+            <h1>Frequently Asked Questions</h1>
+            <p>A frequently asked questions (FAQ) list is often used in articles, websites, email lists, and online
+                forums where common questions tend to recur, for example through posts or queries by new users related
+                to common knowledge gaps.</p>
+        </div>
+        <div class="accordion px-5" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        What are the difference between Flexbox and Grid?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox
+                        was designed for layout in one dimension - either a row or a column. Grid was
+                        designed for two-dimensional layout - rows, and columns at the same time. The two
+                        specifications share some common features, however, and if you have already
+                        learned how to use flexbox, the similarities should help you get to grips with Grid.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        What are the difference between Bootstrap and Tailwind?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Bootstrap is an open-source framework that is used to design responsive websites better,
+                        faster, and easier. It is a beginner-friendly and the most popular open-source
+                        framework that includes HTML, CSS, and JavaScript.
+                        Tailwind CSS is a utility-first CSS framework for building custom user interfaces
+                        rapidly and efficiently. It is an inline styling used to achieve a sleek interface without
+                        writing code for your own CSS.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        What is CSS Box Model
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        In CSS, the term "box model" is used when talking about design and layout.
+                        The CSS box model is essentially a box that wraps around every HTML element.
+                        It consists of: margins, borders, padding, and the actual content.
+                        The box model allows us to add a border around elements, and to define space
+                        between elements.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        What is a Simentic Tag?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        A semantic element clearly describes its meaning to both the browser and the
+                        developer.Examples of non-semantic elements: div and span - Tells nothing about its
+                        content.Examples of semantic elements: form, table, and article Clearly defines its content.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FAQ Section Ends here  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
