--- a/index.html
+++ b/index.html
@@ -312,6 +312,21 @@
         </div>
     </section>
     <!-- FAQ Section Ends here  -->
+    <div class="d-none d-lg-block">
+        <section class="container mt-5">
+            <div class="text-center mb-5">
+                <h1 class="fw-bold">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-flex justify-content-between text-center px-5 mx-5">
+                <img class="img-fluid" src="images/company/company-1.png" alt="" width="100" height="25">
+                <img class="img-fluid" src="images/company/company-2.png" alt="" width="100" height="25">
+                <img class="img-fluid" src="images/company/company-3.png" alt="" width="100" height="25">
+                <img class="img-fluid" src="images/company/company-4.png" alt="" width="100" height="25">
+                <img class="img-fluid" src="images/company/company-5.png" alt="" width="100" height="25">
+                <img class="img-fluid" src="images/company/company-6.png" alt="" width="100" height="25">
+            </div>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
