--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             world-class universities and companies.</p>
         <div>
             <div class="row mt-5">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
@@ -171,11 +171,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -188,11 +188,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -205,11 +205,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="card mb-3">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
