--- a/index.html
+++ b/index.html
@@ -230,6 +230,38 @@
         </div>
     </section>
     <!-- Courses section ends here  -->
+    <!-- Modal section  -->
+    <section class="container bg-primary mt-5 d-flex align-items-center p-5">
+        <div>
+            <h1 class="text-white">Ready To Join?</h1>
+            <p class="text-white pe-5">Are you ready to join to our online Technical courses which will probably shape
+                your
+                future</p>
+        </div>
+        <div><button class="btn btn-lg btn-light ms-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Register
+                Now</button>
+        </div>
+    </section>
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Understood</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- FAQ section starts here  -->
     <section class="container mt-5">
         <div class="text-center px-5">
